--- a/testSnippet/pdfChunk.ipynb
+++ b/testSnippet/pdfChunk.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "9653fdc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/obt/Library/Caches/pypoetry/virtualenvs/pdfq-back-CzKW63L7-py3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# PDF 파일을 \\n\\n 단위로 우선 분할, 길이 초과시 토큰 단위로 300토큰씩 30토큰 오버랩 분할\n",
     "import pymupdf\n",
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "dc2b0e1c",
    "metadata": {},
    "outputs": [
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e0a62d66",
    "metadata": {},
    "outputs": [],
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "6416f979",
    "metadata": {},
    "outputs": [
@@ -181,27 +190,27 @@
      "data": {
       "text/plain": [
        "{'event': 'message',\n",
-       " 'task_id': 'c31b71be-8f5c-473c-b9b3-ee9f18555dff',\n",
-       " 'id': '8bd00a21-f9db-4c29-9ba5-1db4d9ccd6e0',\n",
-       " 'message_id': '8bd00a21-f9db-4c29-9ba5-1db4d9ccd6e0',\n",
+       " 'task_id': '27f99c46-dff7-4cb7-9ab8-b91212e3052c',\n",
+       " 'id': 'd6b1a902-6f0d-40a8-bdff-8687cd5e072c',\n",
+       " 'message_id': 'd6b1a902-6f0d-40a8-bdff-8687cd5e072c',\n",
        " 'mode': 'completion',\n",
-       " 'answer': '{\"chapters\": [{\"title\": \"운영체제 개요\", \"sections\": [\"운영체제의 정의와 목표\", \"운영체제의 주요 기능\", \"운영체제의 기능 분류\", \"운영체제 구성요소와 역할\", \"커널과 쉘의 역할\"]}, {\"title\": \"운영체제 연산\", \"sections\": [\"트랩과 시스템 호출\", \"사용자 모드와 커널 모드\"]}, {\"title\": \"운영체제 구조\", \"sections\": [\"간단한 구조\", \"계층적 접근\", \"마이크로커널\", \"모놀리식 커널\"]}, {\"title\": \"운영체제 발달 과정\", \"sections\": [\"일괄처리 시스템\", \"다중 프로그래밍 시스템\", \"시분할 시스템\", \"다중 처리 시스템\", \"실시간 처리 시스템\", \"다중 모드 처리 시스템\", \"분산 처리 시스템\"]}, {\"title\": \"프로세스\", \"sections\": [\"프로세스 개요\", \"프로그램과 프로세스의 차이\", \"프로세스의 메모리 구조\", \"프로세스 제어 블록(PCB)과 역할\", \"프로세스 상태와 상태 전이\"]}, {\"title\": \"프로세스와 스레드\", \"sections\": [\"프로세스와 스레드 비교\", \"싱글 스레드와 멀티 스레드\", \"커널 스레드와 사용자 스레드\"]}, {\"title\": \"프로세스 스케줄링\", \"sections\": [\"스케줄링 개요\", \"스케줄링의 종류(기능별, 방법별)\", \"선입선출 스케줄링(FCFS)\", \"최단 작업 우선 스케줄링(SJF)\", \"최단 잔여 시간 우선 스케줄링(SRT)\", \"HRN 스케줄링\", \"우선순위 스케줄링\", \"라운드로빈 스케줄링(RR)\", \"다단계 큐 스케줄링(MLQ)\", \"다단계 피드백 큐 스케줄링(MFQ)\", \"기아(Starvation)와 에이징(Aging)\"]}, {\"title\": \"병행 프로세스와 임계 영역\", \"sections\": [\"병행 프로세스 개요\", \"임계 영역 문제와 해결 조건\", \"2개 프로세스 간 상호 배제 알고리즘\", \"N개 프로세스 간 상호 배제 알고리즘(Lamport\\'s Bakery Algorithm)\", \"Race condition 예시\"]}]}',\n",
-       " 'metadata': {'usage': {'prompt_tokens': 9138,\n",
+       " 'answer': '{\"chapters\": [{\"title\": \"운영체제 개요\", \"sections\": [\"운영체제의 주요 목적\", \"운영체제의 기능\", \"운영체제의 기능 분류\", \"운영체제의 구성 요소와 역할\", \"운영체제 연산 (커널과 시스템 호출)\", \"트랩과 시스템 호출\", \"사용자 모드와 커널 모드\", \"운영체제 구조\", \"운영체제의 발달 과정\"]}, {\"title\": \"프로세스 관리\", \"sections\": [\"프로세스 개요\", \"프로그램과 프로세스의 차이\", \"프로세스의 메모리 구조(정적 영역, 동적 영역)\", \"프로세스 제어 블록(PCB)의 주요 정보\", \"PCB의 역할\", \"프로세스 상태와 상태 전이\", \"프로세스 상태\", \"프로세스 상태 전이\", \"프로세스와 스레드 비교\", \"프로세스(Process)\", \"스레드(Thread)\", \"싱글 스레드와 멀티 스레드\", \"싱글 스레드 (Single Thread)\", \"멀티 스레드 (Multi Thread)\"]}, {\"title\": \"스케줄링\", \"sections\": [\"스케줄링 개요\", \"스케줄링의 종류(기능별 분류)\", \"스케줄링의 종류(방법별 분류)\", \"CPU 스케줄링 알고리즘\", \"선입선출 스케줄링 (FCFS)\", \"최단 작업 우선 스케줄링 (SJF)\", \"최단 잔여 시간 우선 스케줄링 (SRT)\", \"HRN 스케줄링 (Highest Response Ratio Next)\", \"우선순위 스케줄링 (Priority Scheduling)\", \"라운드로빈 스케줄링 (Round-Robin, RR)\", \"다단계 큐 스케줄링 (Multi-Level Queue, MLQ)\", \"다단계 피드백 큐 스케줄링 (Multi-Level Feedback Queue, MFQ)\", \"기아(Starvation)와 에이징(Aging)\"]}, {\"title\": \"프로세스 동기화\", \"sections\": [\"병행 프로세스\", \"임계영역 문제\", \"2개 프로세스 간 상호 배제\", \"N개 프로세스 간 상호 배제\"]}]}',\n",
+       " 'metadata': {'usage': {'prompt_tokens': 1122,\n",
        "   'prompt_unit_price': '0',\n",
        "   'prompt_price_unit': '0.000001',\n",
        "   'prompt_price': '0',\n",
-       "   'completion_tokens': 600,\n",
+       "   'completion_tokens': 545,\n",
        "   'completion_unit_price': '0',\n",
        "   'completion_price_unit': '0.000001',\n",
        "   'completion_price': '0',\n",
-       "   'total_tokens': 9738,\n",
+       "   'total_tokens': 1667,\n",
        "   'total_price': '0',\n",
        "   'currency': 'USD',\n",
-       "   'latency': 5.031488380976953}},\n",
-       " 'created_at': 1747662381}"
+       "   'latency': 4.491734149865806}},\n",
+       " 'created_at': 1748293976}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "3b2c8e21",
    "metadata": {},
    "outputs": [
@@ -285,7 +294,7 @@
        " '## 5. 챌린지\\n- race condition\\n    - 다음 프로세스 A, B는 공유 변수 count를 공유하며 병행 실행되고 있다.\\n    - 공유 변수 count의 초깃값은 0이며, a와 b는 각 프로세스에서만 사용되는 변수이다. 아래는 프로세스 별 의사코드이다.\\n    \\n    ```c\\n    // Process A\\n    // a는 지역 변수\\n    for(4회 반복){\\n    a = count;\\n    a = a * 3;\\n    count = a;\\n    }\\n    ```\\n    \\n    - count가 가질 수 있는 최댓값, 최솟값은?\\n    - 최솟값 : 0\\n    - 최댓값 : 324(4 * 3 * 3 * 3 * 3)\\n    \\n    ```c\\n    // Process B\\n    // b는 지역 변수\\n    for(4회 반복){\\n    b = count;\\n    b = b + 1;\\n    count = b;\\n    }\\n    ```']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "d9730001",
    "metadata": {},
    "outputs": [
@@ -343,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "c8c3b8e6",
    "metadata": {},
    "outputs": [
@@ -367,7 +376,7 @@
       "    - 원시 프로그램을 기계어로 번역하는 기능 (컴파일러의 역할)\n",
       "    - 목적 프로그램의 생성 및 연결(링커의 역할)\n",
       "    - 데이터 압축 및 복원(유틸리티 프로그램 역할)\n",
-      "거리:0.26685482263565063\n",
+      "거리:0.3183290958404541\n",
       "---\n",
       "Top 2 결과:\n",
       "### 1.2. 운영체제의 기능\n",
@@ -375,19 +384,19 @@
       "\n",
       "- **자원 관리(중요)**: **메모리 관리, 프로세스 관리, 주변 장치 관리, 파일(데이터) 관리**\n",
       "- **시스템 관리**: 시스템 보호(사용자 권한 관리), 네트워킹(통신), 명령 인터프리터 제공\n",
-      "거리:0.3587704598903656\n",
+      "거리:0.3747614622116089\n",
       "---\n",
       "Top 3 결과:\n",
-      "### 2.2. 사용자 모드와 커널 모드\n",
-      "- 참고 : 커널과 쉘 - 커널 - 운영체제의 중심부로 하드웨어를 직접 관리하고 제어하는 핵심적 역할을 수행 - 주된 역할: - 프로세스 관리(생성, 종료, 스케줄링 등) - 메모리 관리(할당, 회수, 가상 메모리 등) - 파일 시스템 관리(파일 입출력, 파일 접근 관리 등) - 입출력 장치 관리 및 하드웨어 자원 관리 - 커널은 운영체제의 가장 내부에서 작동하여 응용 프로그램과 하드웨어 사이의 중재자 역할을 수행 - 쉘 - 쉘은 사용자가 운영체제와 상호작용할 수 있도록 제공하는 **사용자 인터페이스(UI)** 프로그램 - 주된 역할: - 사용자 명령어를 해석하여 운영체제의 커널에 전달함. - 사용자의 명령을 실행하고 결과를 다시 사용자에게 전달하는 역할을 수행 - 사용자는 직접 커널에 접근할 수 없고, 쉘을 통해 운영체제의 기능을 사용할 수 있음.\n",
-      "거리:0.38860654830932617\n",
+      "## 2. 프로세스 제어 블록(PCB)\n",
+      "- *PCB(Process Control Block)**은 운영체제가 프로세스를 관리하기 위한 정보가 담긴 자료구조로, 다음과 같은 내용을 포함함.\n",
+      "거리:0.3794053792953491\n",
       "---\n"
      ]
     }
    ],
    "source": [
     "# 검색 쿼리 예시 및 RAG에 활용할 수 있는 검색 코드\n",
-    "query = \"운영 프로그램의 기능 분류 중 감시 프로그램이란?\"\n",
+    "query = \"운영 프로그램의 기능 분류 중 작업 제어 프로그램이란?\"\n",
     "results = collection.query(\n",
     "    query_texts=[query],\n",
     "    n_results=3\n",
